# falcon-twig

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
.cursor/rules/: project-brief.mdc
configs/: first_run.toml
scripts/: bootstrap_fastpath.sh  fastpath_doctor.sh
src/: config.py  data.py  main.py  modeling.py  train.py
