[project]
name = "falcon-twig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "transformers>=4.56.0",
    "pydantic>=2.6.0",
    "accelerate>=0.34",
    "peft>=0.11.1",
    "bitsandbytes>=0.43.1",
    "evaluate",
    "jsonlines",
    "tqdm",
]

[project.optional-dependencies]
# GPU-accelerated kernels for Falcon H1 (Mamba SSM) and fast attention.
# Install only on a CUDA Linux box with a matching PyTorch/CUDA toolchain.
fastpath = [
  # Mamba SSM fused kernels (required for fast Falcon H1)
  "mamba-ssm>=2.2.2",
  # Fused causal conv1d kernels used by Mamba
  "causal-conv1d>=1.4.0.post2",
  # FlashAttention 2 for faster attention where applicable
  "flash-attn>=2.6.3",
]

[tool.uv]
dev-dependencies = [
  "ruff",
  "pytest",
]
