[project]
name = "falcon-twig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML dependencies
    "torch>=2.2.0",
    "datasets>=4.0.0",
    "transformers>=4.56.0",
    "pydantic>=2.6.0",
    "accelerate>=0.34",
    "peft>=0.11.1",
    "evaluate",
    "jsonlines",
    "tqdm",
]

[project.optional-dependencies]
# GPU-accelerated kernels for Falcon H1 (Mamba SSM) and fast attention.
# Only install on Linux with CUDA toolkit and compatible Python version.
fastpath = [
    # FlashAttention 2 for faster attention
    "flash-attn>=2.3.0; python_version < '3.12'",
    # Mamba SSM fused kernels (required for fast Falcon H1)
    "mamba-ssm>=2.2.2,<3.0; python_version < '3.12'",
    # Fused causal conv1d kernels used by Mamba
    "causal-conv1d>=1.4.0.post2; python_version < '3.12'",
]

# CUDA-specific dependencies (Linux only)
cuda = [
    "bitsandbytes>=0.43.1; platform_system == 'Linux'",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
]